--- a/Lab01/CMakeLists.txt
+++ b/Lab01/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.14)
-project(Lab01 C)
+project(PiDP C)
 include_directories(/usr/lib/x86_64-linux-gnu/openmpi/lib)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(Lab01 main.c)
+add_executable(Lab01 L01.1.c)
+#add_executable(Lab01 L01.2.c)
+#add_executable(Lab01 L01.3.c)
+#add_executable(Lab01 L01.4.c)
